--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -52,8 +52,8 @@
             <img src="{% static 'icons/bars.svg' %}" alt="" class="image-icon" width="24" height="24">
         </div>
     </div>
-</header>
-<section class="header-info"><p style="padding: 0px 2px;">Почитувани поради новогодишните празници вашите нарачки или рекламации направени помеѓу 30.12 - 07.01 ќе бидат процесирани и испратени на 08.01. Ви посакуваме убави празници!</p></section>
+</header> 
+{#<section class="header-info"><p style="padding: 0px 2px;">Почитувани поради новогодишните празници вашите нарачки или рекламации направени помеѓу 30.12 - 07.01 ќе бидат процесирани и испратени на 08.01. Ви посакуваме убави празници!</p></section>#}
 <div id="sidecart">
     <div class="cart-close">
         <span id="close-cart">&#10006</span>
