--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -5,17 +5,17 @@
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="GreenGoShop - Macedonia">
+    <meta name="description" content="Promotivno - Macedonia">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="facebook-domain-verification" content="h2usro5nxhvyib48mq1rehoul0nf1o" />
     
     <meta property="og:type" content="Website">
-    <meta property="og:site_name" content="GreenGoShop Macedonia">
+    <meta property="og:site_name" content="Promotivno Macedonia">
     {% block metatags %}{% endblock metatags %}
     
     {% if title %}
-        <title>{{ title }} - GreenGoShop</title>
-        <meta property="og:title" content="{{ title }} - GreenGoShop">
+        <title>{{ title }} - Promotivno</title>
+        <meta property="og:title" content="{{ title }} - Promotivno">
     {% else %}
         <title>Почетна</title>
         <meta property="og:title" content="Почетна">
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main_minified_v13.css' %} ">
+    <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main.css' %} ">
     <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/webmanifest/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/icons/webmanifest/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/icons/webmanifest/favicon-16x16.png">
@@ -96,12 +96,12 @@
     {% include "shop/includes/header.html" %} 
     <nav id="navigation" style="z-index:1000000000!important">
         <ul>
-            <li class="navigation-item"><a href="https://greengoshop.mk/" class="navigation-title">ПОЧЕТНА</a></li>
-            <li class="navigation-item"><a href="https://greengoshop.mk/product-category/najprodavani/" class="navigation-title">НАЈПРОДАВАНИ</a></li>
-            <li class="navigation-item"><a href="https://greengoshop.mk/product-category/domakjinstvo/" class="navigation-title">ДОМАЌИНСТВО</a></li>
-            <li class="navigation-item"><a href="https://greengoshop.mk/product-category/gradina/" class="navigation-title">ГРАДИНА</a></li>
-            <li class="navigation-item"><a href="https://greengoshop.mk/product-category/zdravje-i-ubavina/" class="navigation-title">ЗДРАВЈЕ И УБАВИНА</a></li>
-            <li class="navigation-item"><a href="https://greengoshop.mk/product-category/kujnski-aparati/" class="navigation-title">КУЈНСКИ АПАРАТИ</a></li>
+            <li class="navigation-item"><a href="https://promotivno.mk/" class="navigation-title">ПОЧЕТНА</a></li>
+            <li class="navigation-item"><a href="https://promotivno.mk/product-category/najprodavani/" class="navigation-title">НАЈПРОДАВАНИ</a></li>
+            <li class="navigation-item"><a href="https://promotivno.mk/product-category/domakjinstvo/" class="navigation-title">ДОМАЌИНСТВО</a></li>
+            <li class="navigation-item"><a href="https://promotivno.mk/product-category/gradina/" class="navigation-title">ГРАДИНА</a></li>
+            <li class="navigation-item"><a href="https://promotivno.mk/product-category/zdravje-i-ubavina/" class="navigation-title">ЗДРАВЈЕ И УБАВИНА</a></li>
+            <li class="navigation-item"><a href="https://promotivno.mk/product-category/kujnski-aparati/" class="navigation-title">КУЈНСКИ АПАРАТИ</a></li>
         </ul>
     </nav>
     <div class="page-container">
