--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -316,7 +316,7 @@
         <div class="footer-item ">
             <h3>Контакт</h3>
             <a href="tel:071321312" aria-label="Контакт телефон"><img src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16">+389 71321312 (10:00 – 23:00)</a>
-            <a href="mailto:contact@greengoshop.mk" aria-label="Контакт mail"><img src="{% static 'icons/envelope.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16">contact@greengoshop.mk</a>
+            <a href="mailto:contact@promotivno.mk" aria-label="Контакт mail"><img src="{% static 'icons/envelope.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16">contact@promotivno.mk</a>
         </div>
         <div class="footer-item">
             <h3>Полиси</h3>
@@ -330,14 +330,14 @@
         </div>
     <hr class="horizontal-line">
     <div class="footer-social-icons">
-        <a href="https://www.facebook.com/greengoshop.mk" aria-label="Facebook"><img src="{% static 'icons/facebook.svg' %}" alt="" class="image-icon filter-white" width="24" height="24"></a>
-        <a href="https://www.instagram.com/greengoshop.mk/" aria-label="Instagram"><img src="{% static 'icons/instagram.svg' %}" alt="" class="image-icon filter-white" width="24" height="24"></a>
+        <a href="https://www.facebook.com/promotivno.mk" aria-label="Facebook"><img src="{% static 'icons/facebook.svg' %}" alt="" class="image-icon filter-white" width="24" height="24"></a>
+        <a href="https://www.instagram.com/promotivno.mk/" aria-label="Instagram"><img src="{% static 'icons/instagram.svg' %}" alt="" class="image-icon filter-white" width="24" height="24"></a>
     </div> 
 </div>
 </footer>
 <section class="footer-section">
     <div class="footer-inner">
         <p>*Сликите се симболични и не ги гарантираат карактеристиките на предметите. Цените може да подлежат на промена без претходна најава. Сите прикажани цени се со пресметан ДДВ.</p>
-        <h4>Copyright {% now 'Y' %} © Сите права припаѓаат на GreenGoShop</h4>
+        <h4>Copyright {% now 'Y' %} © Сите права припаѓаат на Promotivno</h4>
     </div>
 </section>
