--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -5,9 +5,9 @@
 <section id="header-banner">
     <div class="banner-inner-header-1" style="display: flex;align-items:center;justify-content:center ">
         <a href="tel:071321312" class="banner-text">071321312 (10:00 - 23:00)</a>
-        <a href="mailto:contact@greengoshop.mk" class="banner-text">contact@greengoshop.mk</a>
-        <a href="https://www.facebook.com/greengoshop.mk" aria-label="Facebook"><img src="{% static 'icons/facebook.svg' %}"  class="image-icon filter-white"  alt="" width="16" height="16"></a>
-        <a href="https://www.instagram.com/greengoshop.mk" aria-label="Instagram"><img src="{% static 'icons/instagram.svg' %}" class="image-icon filter-white" alt="" width="16" height="16"></a>
+        <a href="mailto:contact@promotivno.mk" class="banner-text">contact@promotivno.mk</a>
+        <a href="https://www.facebook.com/promotivno.mk" aria-label="Facebook"><img src="{% static 'icons/facebook.svg' %}"  class="image-icon filter-white"  alt="" width="16" height="16"></a>
+        <a href="https://www.instagram.com/promotivno.mk" aria-label="Instagram"><img src="{% static 'icons/instagram.svg' %}" class="image-icon filter-white" alt="" width="16" height="16"></a>
     </div>
 </section>
 {% else %}
@@ -21,11 +21,7 @@
 
         <div class="header-logo-container">
         <a href="{% url 'shop-home' %}" class="header-logo-link" aria-label="Почетна">
-            <picture>
-                <source srcset="{% static 'icons/header-logo.webp' %}" type="image/webp">
-                <img src="{% static 'icons/header-logo.png' %}" alt="default.jpg" class="header-logo-img" width="280" height="80" >
-            </picture>
-            
+            <img src="{% static 'icons/header-logo.png' %}" alt="default.jpg" class="header-logo-img" width="200"  >
         </a>
         </div>
         <a href="tel:+38971321312" class="header-icon mobile above-small">
