--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -1,7 +1,7 @@
 {% extends 'shop/base.html' %}
 {% load static %}
 {% block metatags %}
-<meta property="og:image" content="https://greengoshop.mk{{product.thumbnail.url}}" />
+<meta property="og:image" content="https://promotivno.mk{{product.thumbnail.url}}" />
 {% endblock metatags %}
 {% block content %}
 <style>#overlay-loader{position:absolute;height:559px;width:550px;z-index:100;background:#fff;display:flex;align-items:center;justify-content:center}@media (max-width:767px){#overlay-loader{width:100%;height:100vw}}#overlay-loader img{width:40px;height:40px}</style>
@@ -10,7 +10,7 @@
 <div class="col-1 product-page">
         <div class="sticky-holder" style="position:relative">
         <div class="product-sale-badge"><p>-{{product.get_percentage_off}}%</p></div>
-        <div id="overlay-loader" style=""><img src="https://greengoshop.mk/static/icons/5.svg" width="40" height="40"></div>
+        <div id="overlay-loader" style=""><img src="https://promotivno.mk/static/icons/5.svg" width="40" height="40"></div>
         <div class="slider-holder">
                     <div>
                          <picture>
