--- a/shop/templates/shop/shopmanager/bootstrap_base.html
+++ b/shop/templates/shop/shopmanager/bootstrap_base.html
@@ -5,7 +5,7 @@
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="GreenGoShop - Macedonia">
+    <meta name="description" content="Promotivno - Macedonia">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="facebook-domain-verification" content="h2usro5nxhvyib48mq1rehoul0nf1o" />
     {% if title %}
