--- a/shop/templates/shop/policies/dostava.html
+++ b/shop/templates/shop/policies/dostava.html
@@ -4,7 +4,7 @@
             <div class="politika-page">
                 <h1 class="politika-name">Достава</h1>
                 <p class="politika-point"><strong>1.1 Која курирска служба ја испорачува стоката?</strong></p>
-                <p class="politika-description">Promotivno соработува со курирската служба ИН ПОШТА РАДЕСКИ и сите пакети се испраќаат преку ИН ПОШТА РАДЕСКИ.</p>
+                <p class="politika-description">Promotivno соработува со курирската служба ELS и сите пакети се испраќаат преку ELS.</p>
                 <p class="politika-point"><strong>1.2 Време на испорака?</strong></p>
                 <p class="politika-description">По вашата успешна нарачка, ние ќе го испратиме пакетот истиот или следниот работен ден (освен ако не се договориме поинаку со вас) Времето за достава по испораката е 2-5 работни дена</p>
                 <p class="politika-point"><strong>1.3 Цена за испорака?</strong></p>
