--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -1,7 +1,8 @@
 {% extends "shop/base.html" %}
+{% load humanize %}
 {% load static %}
 {% block metatags %}
-<meta property="og:image" content="https://promotivno.mk{% static 'icons/logo_meta_tag.webp' %}" />
+<meta property="og:image" content="https://promotivno.com{% static 'icons/logo_meta_tag.webp' %}" />
 {% endblock metatags %}
 {% block content %}
 <style>body #fb-root{display:none!important}#footer,.footer-section{display:none}.red{border-color:red}#ordered_items_notice_wrapper{visibility:hidden}</style>
@@ -245,7 +246,7 @@
                     {% endif %}
                     <tr class="cart-subtotal"> 
                         <td>
-                            <p>Цена</p>
+                            <p>Вкупна цена</p>
                         </td>
                         <td>
                             <p>{{ cart_total|add:feetotal }} ден</p>
@@ -259,16 +260,8 @@
                             {% if free_shipping %}
                             <p class="cart-shipping-method">Бесплатна достава</p>
                             {% else %}
-                            <p class="cart-shipping-method">До врата - 180ден</p>
+                            <p class="cart-shipping-method">Достава до врата - 180ден</p>
                             {% endif %}
-                        </td>
-                    </tr>
-                    <tr class="cart-provision">
-                        <td>
-                            <p>Провизија</p>
-                        </td>
-                        <td>
-                            <p class="cart-provision-sum">30 ден</p>
                         </td>
                     </tr>
                     <tr class="cart-total">
@@ -277,12 +270,12 @@
                         </td>
                         <td>
                             {% if free_shipping %}
-                            <p><span class="cart-total-span">{{ cart_total|add:feetotal|add:'30' }}</span> ден</p>
+                            <p><span class="cart-total-span">{{ cart_total|add:feetotal|add:'30'|intcomma }}</span> ден</p>
                             {% else %}
-                            <p><span class="cart-total-span">{{ cart_total|add:feetotal|add:'180'|add:'30' }}</span> ден</p>
+                            <p><span class="cart-total-span">{{ cart_total|add:feetotal|add:'180'|add:'30'|intcomma }}</span> ден</p>
                             {% endif %}
                         </td>
-                    </tr>
+                    </tr> 
                 </tfoot>
                 
             </table>
@@ -290,7 +283,7 @@
         
         <div id="payment">
             <div class="payment-text">
-                <p class="payment-info">Плаќање при достава (+30 ден. провизија)</p>
+                <p class="payment-info">Плаќање при достава</p>
                 <p class="payment-method">Плати на врата при подигање на нарачката</p>
             </div>
             <div class="place_order-section">
